--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 <div><dt><input type="checkbox" id="showchasm"  onclick="toggleBoxes()" style="height:19px;width:19px;">Chasm</dt><dd id="chasmcount">0</dd></div>
 <div><dt><input type="checkbox" id="showcanon"  onclick="toggleBoxes()" style="height:19px;width:19px;">Canon Wars</dt><dd id="canoncount">0</dd></div>
 <div><dt><input type="checkbox" id="showspiral"  onclick="toggleBoxes()" style="height:19px;width:19px;">Open Spiral</dt><dd id="spiralcount">0</dd></div>
+<div><dt><input type="checkbox" id="showdevil"  onclick="toggleBoxes()" style="height:19px;width:19px;">Devil's Work</dt><dd id="devilcount">0</dd></div>
 <hr>
 
 <div class="out" style="display:block;"><h3>Ccru Writings</h3></div>
@@ -51,6 +52,7 @@
 <div class="out" id="chasm" style="display:block;"><strong>Chasm</strong><div><ol id="chasmmatch">N/A</ol></div></div>
 <div class="out" id="canon" style="display:block;"><strong>Canon Wars</strong><div><ol id="canonmatch">N/A</ol></div></div>
 <div class="out" id="spiral" style="display:block;"><strong>Open Spiral</strong><div><ol id="spiralmatch">N/A</ol></div></div>
+<div class="out" id="devil" style="display:block;"><strong>Devil's Work</strong><div><ol id="devilmatch">N/A</ol></div></div>
 </dl>
 
 <nav>
