--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body onload="toggleBoxes()">
 <noscript>JavaScript Required</noscript>
 <div class="top" id="head">
+<h2><center>Alphanumeric Qabbala<center></h2>
 <form onsubmit="return false;"><input type="text" id="input" placeholder="Input Test Phrase" spellcheck="false" autofocus></form>
 <dl>
 <div><dt>Sum (AQ)</dt><dd id="result">0</dd></div>
